Change GraphQL Application endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#Logging
+logging.level.root=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=DEBUG
+
+#GraphQL
+#by default /graphiql
+graphiql.mapping=/api-docs
+#by default /graphql
+graphql.servlet.mapping=/student-service
 
