Add database to Application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,25 @@
 #Logging
-logging.level.root=DEBUG
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=DEBUG
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=INFO
+com.example.demo=DEBUG
 
 #GraphQL
 #by default /graphiql
 graphiql.mapping=/api-docs
 #by default /graphql
 graphql.servlet.mapping=/student-service
+
+# H2
+spring.datasource.url=jdbc:h2:./target/db/demo;DB_CLOSE_ON_EXIT=FALSE
+
+spring.datasource.username=demo
+spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
+
+# Enabling H2 Console
+spring.h2.console.enabled=true
+
+# Custom H2 Console URL
+spring.h2.console.path=/h2
 
