Add GraphQL Resolver to fetch data and jpa lazy loading example

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.h2.console.enabled=true
 # Custom H2 Console URL
 spring.h2.console.path=/h2
 
+# JPA
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
